<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ResultActivity">

    <item
        android:id="@+id/action_step_0"
        android:showAsAction="always|withText"
        android:title="@string/action_step_0"
        tools:ignore="AlwaysShowAction,AppCompatResource"/>

    <item
        android:id="@+id/action_step_1"
        android:showAsAction="always|withText"
        android:title="@string/action_step_1"
        tools:ignore="AlwaysShowAction,AppCompatResource"/>

    <item
        android:id="@+id/action_step_2"
        android:showAsAction="always|withText"
        android:title="@string/action_step_2"
        tools:ignore="AlwaysShowAction,AppCompatResource"/>

    <item
        android:id="@+id/action_step_3"
        android:showAsAction="always|withText"
        android:title="@string/action_step_3"
        tools:ignore="AlwaysShowAction,AppCompatResource"/>

    <item
        android:id="@+id/action_step_4"
        android:showAsAction="always|withText"
        android:title="@string/action_step_4"
        tools:ignore="AlwaysShowAction,AppCompatResource"/>

</menu>